fixed typo in about me

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -53,7 +53,7 @@
                     away for the last decade or so, I finally moved back to the Southwest. My paternal grandfather's old
                     wood shop is still next to the adobe house he built for my grandmother today. Since I've been back,
                     I've taken advantage of the space to build quality pieces of work. I hope my passion and the thought
-                    put into these pieces will being as much joy to others as it has brought me to make them.</p>
+                    put into these pieces will bring as much joy to others as it has brought me to make them.</p>
             </div>
         </div>
     </div>
@@ -211,7 +211,7 @@
         <h3 class="ml-5 mb-3">
             <span>Contact</span>
         </h3>
-        <form id="contact-form" action="http://localhost:4200/apis/" method="post" novalidate="novalidate">
+        <form id="contact-form" action="./apis/" method="post" novalidate="novalidate">
             <!--                name line-->
             <div class="container">
                 <div class="row">
