removed npm install in Dockerfile, updated testimonials, gallery

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -68,40 +68,41 @@
         </a>
                 <a href="pictures/straightrazorstand.jpg" data-toggle="lightbox" data-gallery="gallery"
            class="col-md-4 ">
-            <img src="pictures/straightrazorstand.jpg" class="img-fluid rounded each-pic" alt="straightrazor">
+            <img src="pictures/straightrazorstand.jpg" class="img-fluid rounded each-pic" alt="straightrazorbrushstand">
         </a>
-        <a href="pictures/top-view.jpg" data-toggle="lightbox" data-gallery="gallery"
+        <a href="pictures/thirdbrushstand.jpg" data-toggle="lightbox" data-gallery="gallery"
            class="col-md-4">
+            <img src="pictures/thirdbrushstand.jpg" class="img-fluid rounded each-pic" alt="thirdbrushstand">
+        </a>
+    </div>
+    <div class="row gallery-row">
+        <a href="pictures/top-view.jpg" data-toggle="lightbox" data-gallery="gallery"
+           class="col-md-4 ">
             <img src="pictures/top-view.jpg" class="img-fluid rounded each-pic" alt="topview">
+        </a>
+        <a href="pictures/coasters5.jpg" data-toggle="lightbox" data-gallery="gallery"
+           class="col-md-4">
+            <img src="pictures/coasters5.jpg" class="img-fluid rounded each-pic" alt="coasterring">
+        </a>
+        <a href="pictures/espresso-coaster.jpg" data-toggle="lightbox" data-gallery="gallery"
+           class="col-md-4 ">
+            <img src="pictures/espresso-coaster.jpg" class="img-fluid rounded each-pic" alt="espressocoaster">
         </a>
     </div>
     <div class="row gallery-row">
         <a href="pictures/landscape2.jpg" data-toggle="lightbox" data-gallery="gallery"
-           class="col-md-4">
+           class="col-md-4 ">
             <img src="pictures/landscape2.jpg" class="img-fluid rounded each-pic" alt="landscape">
         </a>
-        <a href="pictures/espresso-coaster.jpg" data-toggle="lightbox" data-gallery="gallery"
-           class="col-md-4 ">
-            <img src="pictures/espresso-coaster.jpg" class="img-fluid rounded each-pic" alt="espressocoaster">
+        <a href="pictures/neu-diploma.jpg" data-toggle="lightbox" data-gallery="gallery"
+           class="col-md-4">
+            <img src="pictures/neu-diploma.jpg" class="img-fluid rounded each-pic" alt="neudiploma">
         </a>
-        <a href="pictures/espresso-coaster.jpg" data-toggle="lightbox" data-gallery="gallery"
-           class="col-md-4 ">
-            <img src="pictures/espresso-coaster.jpg" class="img-fluid rounded each-pic" alt="espressocoaster">
+        <a href="pictures/new-frame.jpg" data-toggle="lightbox" data-gallery="gallery"
+           class="col-md-4">
+            <img src="pictures/new-frame.jpg" class="img-fluid rounded each-pic" alt="newframe">
         </a>
-    </div>
-    <div class="row gallery-row">
-            <a href="pictures/neu-diploma.jpg" data-toggle="lightbox" data-gallery="gallery"
-               class="col-md-4">
-                <img src="pictures/neu-diploma.jpg" class="img-fluid rounded each-pic" alt="neudiploma">
-            </a>
-            <a href="pictures/new-frame.jpg" data-toggle="lightbox" data-gallery="gallery"
-               class="col-md-4">
-                <img src="pictures/new-frame.jpg" class="img-fluid rounded each-pic" alt="newframe">
-            </a>
-            <a href="pictures/new-frame.jpg" data-toggle="lightbox" data-gallery="gallery"
-               class="col-md-4 ">
-                <img src="pictures/new-frame.jpg" class="img-fluid rounded each-pic" alt="frame">
-            </a>
+
     </div>
 </div>
 
@@ -165,36 +166,11 @@
                 <div class="container">
                     <h3 class="mb-3 row"><span>Testimonials</span></h3>
                     <div class="reviews row overflow-auto ">
-                        <p>Marcus is one of the best wood workers I've worked with. He always create quality work.</p>
-
-                        <p>I wasn't exactly sure how I wanted the frame for my dog portrait to look like and he took the
-                            time to
-                            relay his vision for the frame. I would highly recommend.</p>
-
-                        <p>Marcus made me a shaving brush stand and it was such a beautiful piece. From the design, to
-                            the wood
-                            quality to the coatings, it was perfect.</p>
-                        <p>Marcus made me a shaving brush stand and it was such a beautiful piece. From the design, to
-                            the wood
-                            quality to the coatings, it was perfect.</p>
-                        <p>Marcus made me a shaving brush stand and it was such a beautiful piece. From the design, to
-                            the wood
-                            quality to the coatings, it was perfect.</p>
-                        <p>Marcus made me a shaving brush stand and it was such a beautiful piece. From the design, to
-                            the wood
-                            quality to the coatings, it was perfect.</p>
-                        <p>Marcus made me a shaving brush stand and it was such a beautiful piece. From the design, to
-                            the wood
-                            quality to the coatings, it was perfect.</p>
-                        <p>Marcus made me a shaving brush stand and it was such a beautiful piece. From the design, to
-                            the wood
-                            quality to the coatings, it was perfect.</p>
-                        <p>Marcus made me a shaving brush stand and it was such a beautiful piece. From the design, to
-                            the wood
-                            quality to the coatings, it was perfect.</p>
-                        <p>Marcus made me a shaving brush stand and it was such a beautiful piece. From the design, to
-                            the wood
-                            quality to the coatings, it was perfect.</p>
+                        <p>"The shaving brush stand was beautifully crafted and the smell of wood was incredible too. You can tell that it was made from one piece of wood. The detail and effort to create the ridges made the piece look even more unique compared to other wooden shaving brush stands." -JC </p>
+                        <p>"I wasn't exactly sure how I wanted the frame for my dog portrait to look like and Marcus took the time to relay his vision for the frame. You can definitely see the level of detail put into the final product. I would highly recommend." -CL </p>
+                        <p>"Marcus made me a shaving brush stand and it was such a beautiful piece. From the design, to the wood quality to the coatings, it was perfect!" -BM</p>
+                        <p>"I had some logs that I brought back from northern New Mexico that I was going to use as firewood but when Marcus saw them it gave him the idea to make some coasters out of them. I commissioned him to make them and they've been perfect for my morning espressos." -WL</p>
+                        <p>"The diploma frames Marcus made for me were perfect and so much better than the generic ones I found online. These were solid wood and I love the floating look." -AC </p>
                     </div>
                 </div>
             </div>
