updated contact form, testimonial, file clean up

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -168,9 +168,9 @@
                     <div class="reviews row overflow-auto ">
                         <p>"The shaving brush stand was beautifully crafted and the smell of wood was incredible too. You can tell that it was made from one piece of wood. The detail and effort to create the ridges made the piece look even more unique compared to other wooden shaving brush stands." -JC </p>
                         <p>"I wasn't exactly sure how I wanted the frame for my dog portrait to look like and Marcus took the time to relay his vision for the frame. You can definitely see the level of detail put into the final product. I would highly recommend." -CL </p>
-                        <p>"Marcus made me a shaving brush stand and it was such a beautiful piece. From the design, to the wood quality to the coatings, it was perfect!" -BM</p>
-                        <p>"I had some logs that I brought back from northern New Mexico that I was going to use as firewood but when Marcus saw them it gave him the idea to make some coasters out of them. I commissioned him to make them and they've been perfect for my morning espressos." -WL</p>
-                        <p>"The diploma frames Marcus made for me were perfect and so much better than the generic ones I found online. These were solid wood and I love the floating look." -AC </p>
+                        <p>"Marcus made me a shaving brush stand and it was such a beautiful piece. From the design, to the wood quality, to the coatings, it was perfect!" -BM</p>
+                        <p>"I had some logs that I brought back from northern New Mexico that I was going to use as firewood but when Marcus saw them it gave him the idea to make some coasters out of them. I commissioned him to make them and they've been perfect for my morning espressos." -KL</p>
+                        <p>"The diploma frames Marcus made for me were perfect and so much better than the generic ones I found online. These were red wood and I love the floating look." -IN </p>
                     </div>
                 </div>
             </div>
@@ -240,7 +240,7 @@
                 </div>
             </div>
             <!-- reCAPTCHA -->
-            <div class="g-recaptcha mb-3 row justify-content-center" data-sitekey="6LdXUVQaAAAAAC6cCJfSZs9A4EU-n-R3Re7m8jPu">
+            <div class="g-recaptcha mb-3 ml-2 row justify-content-center" data-sitekey="6LdXUVQaAAAAAC6cCJfSZs9A4EU-n-R3Re7m8jPu">
             </div>
             <!--empty area for form error/success output-->
             <div class="row mt-2">
